--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -139,7 +139,7 @@ button {
 .bookings-form button {
   padding: 0.8rem 1.5rem;
   border-radius: 8px;
-  background-color: #7b3fa6; /* purple button */
+  background-color: #933cb0; /* purple button */
   color: #f0f0f0;
   font-weight: bold;
   cursor: pointer;
