--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -58,7 +58,7 @@ button:hover {
 
 /* Inputs and textareas */
 input, textarea, select {
-  background-color: #3b1e5a;
+  background-color: #000080;
   color: var(--color-text);
   border: 1px solid var(--color-border);
   border-radius: 8px;
@@ -147,7 +147,7 @@ button {
 }
 
 .bookings-form button:hover {
-  background-color: #000080; /* lighter hover shade */
+  background-color: #9b5fc0; /* lighter hover shade */
 }
 
 :root{
